--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <meta name="msapplication-config" content="./assets/icons/browserconfig.xml">
     
     
-        <meta property="og:image" content="https://priyankvaghela.github.io/assets/gitautodeploy.png">
-    <meta property="og:image:secure_url" content="https://priyankvaghela.github.io/assets/gitautodeploy.png">
+        <meta property="og:image" content="https://raw.githubusercontent.com/Priyank-Vaghela/Git-Auto-Deployer/master/assets/gitautodeploy.png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Priyank-Vaghela/Git-Auto-Deployer/master/assets/gitautodeploy.png">
       <meta property="og:title" content="Git Auto Deployer">
     <meta property="og:description" content="Deploy Code Like a Pro! Automate Code Delivery via Git!">
     <meta property="og:url" content="https://github.com/Priyank-Vaghela/Git-auto-deploy">
